--- a/css/memoryGame.css
+++ b/css/memoryGame.css
@@ -2,20 +2,26 @@ body{
     background-image: url('../image/fond.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
-    overflow: hidden;
-    height: 100vh;
+    height: 100%;
 }
-
-.button{
-    height:100px;
-    width:30px;
+button{
+    height: 50px;
+    width:140px;
+}
+.btn{
+    border: 1px solid black;
+    height: 50px;
+    width:140px;
+    margin-left: 40%;
+    background-color: rgb(252, 240, 80);
+}
+span{
+    text-align: center;
 }
 .tableau{
-    border: 1px solid black;
-    height: 184px;
+    height: 185px;
     width: 135px;
-    background-image: url('../image/panini.PNG');
-    background-size: contain;
+    background-size: cover;
     margin: 10px;
 }
 
@@ -28,4 +34,23 @@ h1{
 
 .click-disabled{
     pointer-events: none;
+}
+.modal {
+    display:none;
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
+    background-color: rgb(252, 240, 80);
+    margin-left: 29%;
+    margin-top: 15%;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
 }
